# AionCLI

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  CHANGELOG.md  Cargo.toml  justfile
.github/workflows/: ci.yml  release.yml
crates/aion-cli/: Cargo.toml
crates/aionui-ai-agent/: AGENTS.md  Cargo.toml
crates/aionui-analytics/: Cargo.toml
crates/aionui-analytics/src/: aggregate.rs  cache.rs  lib.rs  routes.rs  service.rs  types.rs
crates/aionui-analytics/src/parser/: claude.rs  codex.rs  mod.rs
crates/aionui-analytics/tests/: aggregate.rs  cache.rs  claude_parser.rs  codex_parser.rs  service.rs
crates/aionui-analytics/tests/fixtures/: claude_sample.jsonl  codex_fallback.jsonl  codex_no_meta.jsonl  codex_sample.jsonl
crates/aionui-app/: Cargo.toml  build.rs
crates/aionui-assistant/: Cargo.toml
crates/aionui-channel/: Cargo.toml
crates/aionui-conversation/: AGENTS.md  Cargo.toml
crates/aionui-cron/: Cargo.toml
crates/aionui-extension/: Cargo.toml
crates/aionui-extension/src/: constants.rs  dependency.rs  error.rs  hub_routes.rs  lib.rs  lifecycle.rs  loader.rs  routes.rs  skill_routes.rs  skill_service.rs  startup_materialize.rs  state.rs
crates/aionui-extension/src/hub/: index_manager.rs  installer.rs
crates/aionui-extension/tests/: assistant_dispatch_test.rs  dependency_management_test.rs  extension_loading_test.rs  hub_test.rs  lifecycle_hooks_test.rs  startup_materialize.rs  state_persistence_test.rs
crates/aionui-file/: Cargo.toml
crates/aionui-mcp/: Cargo.toml
scripts/: check_layer_deps.sh
(+329 files in other folders)
