[package]
name = "aionui-analytics"
version.workspace = true
edition.workspace = true

[dependencies]
aionui-common.workspace = true
aionui-api-types.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
tracing.workspace = true
walkdir.workspace = true
dirs.workspace = true
dashmap.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
